dnl Process this file with autoconf to produce a configure script.
AC_INIT(apps/splay.cc)
AM_INIT_AUTOMAKE(splay, 0.9.7.0)
AC_SUBST(XSPLAY)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

dnl Checks for libraries.
AC_CHECK_LIB(id3, ID3Tag_New)
AC_CHECK_LIB(m, cos)
AC_CHECK_LIB(pthread,main,INCLUDEPTHREAD=1)
AC_CHECK_LIB(qt, main,XSPLAY=xsplay)

if test "$INCLUDEPTHREAD" = 1; then
	LIBS="$LIBS -lpthread"
AC_DEFINE(PTHREADEDMPEG)
AC_DEFINE(_REENTRANT)
AC_CHECK_HEADERS(pthread.h pthread/mit/pthread.h)
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h malloc.h sys/ioctl.h unistd.h],[],[],[AC_INCLUDES_DEFAULT])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_TYPE_PID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(socket strdup strstr)

AC_OUTPUT(apps/Makefile  Makefile libs/Makefile)
