dnl Process this file with autoconf to produce a configure script.
AC_INIT(apps/splay.cc)
AM_INIT_AUTOMAKE(splay, 0.9.7.1)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([Makefile apps/Makefile libs/Makefile])
AC_SUBST(XSPLAY)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

dnl Checks for libraries.
AC_CHECK_LIB([tag], [main], [AC_CHECK_HEADERS([taglib/tag_c.h],
    [AC_DEFINE([TAGLIB], [1], [Define to 1 for taglib])]
    [LIBTAG=1]
	[LIBS="$LIBS -ltag"]
)])
if test "$LIBTAG" != "1"; then
    AC_CHECK_LIB(id3, ID3Tag_New)
fi
AC_CHECK_LIB(m, cos)
AC_CHECK_LIB(pthread,main,INCLUDEPTHREAD=1)
AC_CHECK_LIB([qt-mt], [main], [XSPLAY=xsplay])
AC_CHECK_LIB([asound], [snd_seq_create_simple_port], [WITH_ALSA=1])

if test "$INCLUDEPTHREAD" = 1; then
	LIBS="$LIBS -lpthread"
    AC_DEFINE(PTHREADEDMPEG, 1, [Define to 1 if you want to use pthreads])
    AC_DEFINE(_REENTRANT, 1, [Define to 1 for POSIX reentrancy])
    AC_CHECK_HEADERS(pthread.h pthread/mit/pthread.h)
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_LANG(C++)
AC_CHECK_HEADERS(iostream)
AC_LANG(C)
if test "$WITH_ALSA" = "1"; then
	LIBS="$LIBS -lasound"
    AC_CHECK_HEADERS([alsa/asoundlib.h],[AC_DEFINE(ALSA, 1, [Define to 1 for alsa])],
        [AC_MSG_ERROR([cannot find ALSA header files])])
fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_TYPE_PID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(socket strdup strstr)

AC_OUTPUT
