dnl Process this file with autoconf to produce a configure script.
AC_INIT(apps/vsplay.cc)
AM_INIT_AUTOMAKE(vsplay, 1.0)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([Makefile apps/Makefile libs/Makefile])

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

AC_LANG(C++)

dnl Checks for libraries.
AC_CHECK_LIB([tag], [main], [AC_CHECK_HEADERS([taglib/tag.h],
    [AC_DEFINE([TAGLIB], [1], [Define to 1 for taglib])]
    [LIBTAG=1]
	[LIBS="$LIBS -ltag"]
)])
AC_CHECK_LIB(m, cos)
AC_CHECK_LIB([asound], [snd_seq_create_simple_port], [WITH_ALSA=1])

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(iostream)
if test "$WITH_ALSA" = "1"; then
	LIBS="$LIBS -lasound"
    AC_CHECK_HEADERS([alsa/asoundlib.h],[AC_DEFINE(ALSA, 1, [Define to 1 for alsa])],
        [AC_MSG_ERROR([cannot find ALSA header files])])
fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_TYPE_PID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(socket strdup strstr)

AC_OUTPUT
